version 4 striedanie turnov - OK